# logitrackAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  main.yml  test.yml
alembic/: env.py
alembic/versions/: 20260227_0045-65a79222c302_create_users_table.py
src/: test_connection.py
src/application/dtos/: user_dto.py
src/core/entities/: user.py
src/infrastructure/: cache.py  database.py
src/infrastructure/api/: dependencies.py  main.py  main_test.py
src/infrastructure/api/routers/: auth.py  tracking.py  users.py
src/infrastructure/config/: auth.py  settings.py
src/infrastructure/persistence/database/: connection.py
src/infrastructure/persistence/models/: user.py
src/logitrackapi/: main.py
tests/: conftest.py  test_health.py
tests/unit/: test_dtos.py
tests/unit/integration/e2e/: test_users.py
